--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+stark:
+  account:
+    environment: ${ZONE:local}
+    id: ${ID_ACCOUNT:0000000000}
+    key: ${KEY:local}
 quarkus:
   datasource:
     jdbc:
